--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
             "Veemo\\Core\\": "src"
         },
         "classmap": [
+            "src/Themes/Exceptions/Exceptions.php"
         ],
 
         "files": [
