--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "illuminate/view": "~5.0",
         "illuminate/filesystem": "~5.0",
         "illuminate/config": "~5.0",
-        "illuminate/routing": "~5.0"
+        "illuminate/routing": "~5.0",
+        "illuminate/html": "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*"
