--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "illuminate/filesystem": "~5.0",
         "illuminate/config": "~5.0",
         "illuminate/routing": "~5.0",
-        "illuminate/html": "~5.0"
+        "illuminate/html": "~5.0",
+
+        "laracasts/flash": "~1.3"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*"
