--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "illuminate/routing": "~5.0",
         "illuminate/html": "~5.0",
 
-        "laracasts/flash": "~1.3"
+        "laracasts/flash": "~1.3",
+        "caffeinated/menus": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*"
